--- a/src/app/components/main/monitor/team/team.component.html
+++ b/src/app/components/main/monitor/team/team.component.html
@@ -22,6 +22,6 @@
 </span>
 
 
-<p-overlayPanel #clansOverlay appendTo="body" styleClass="no-padding no-tip" [ariaCloseLabel]="clan.name">
+<p-overlayPanel #clansOverlay appendTo="body" styleClass="no-padding no-tip" [ariaCloseLabel]="clan?.name">
   <app-team-overlay [clan]="clan"></app-team-overlay>
 </p-overlayPanel>
