--- a/src/app/components/main/monitor/team/team.component.html
+++ b/src/app/components/main/monitor/team/team.component.html
@@ -7,13 +7,13 @@
 
 
 <span class="team-overall-wrapper p-grid">
-  <span class="p-col-6 p-md-12 p-xl-6 inner">
+  <span class="p-col-6 p-md-12 p-xl-6 inner p-pb-0">
     <strong>{{'monitor.labels.averageShips' | translate}}</strong>
     <team-stat-ship-xp [teamAverages]="averages"></team-stat-ship-xp>
     <team-stat-ship-wr [teamAverages]="averages"></team-stat-ship-wr>
     <team-stat-ship-battles [teamAverages]="averages"></team-stat-ship-battles>
   </span>
-  <span class="p-col-6 p-md-12 p-xl-6 inner">
+  <span class="p-col-6 p-md-12 p-xl-6 inner p-pb-0">
     <strong>{{'monitor.labels.averageAccounts' | translate}}</strong>
     <team-stat-acc-xp [teamAverages]="averages"></team-stat-acc-xp>
     <team-stat-acc-wr [teamAverages]="averages"></team-stat-acc-wr>
