fix browser stuff

--- a/src/app/components/main/analytics-info/analytics-info.component.html
+++ b/src/app/components/main/analytics-info/analytics-info.component.html
@@ -1,4 +1,4 @@
-<p *isDesktop>
+<p *isDesktop style="white-space: normal">
   This app uses Google Analytics with the <a externalLink
                                              href="https://developers.google.com/analytics/devguides/collection/protocol/v1">Measurement
   Protocol</a>
@@ -17,7 +17,7 @@
   <br/>
   <strong>If you change your mind, you can always go to the settings and change the option.</strong>
 </p>
-<p *isBrowser>
+<p *isBrowser style="white-space: normal">
   This website/app uses Google Analytics with the <a target="_blank" href="https://developers.google.com/gtagjs">gtag.js</a>
   implementation. <br/>
   It is used to track the visitor amount, visitor actions, general device information (brand, os, screen size, ...) and
