--- a/src/app/components/main/topbar/topbar.component.html
+++ b/src/app/components/main/topbar/topbar.component.html
@@ -19,9 +19,7 @@
         <span>&nbsp;({{ 'monitor.season' | translate }} {{matchInfo.clanSeasonId}})</span>
       </ng-container>
       <ng-container *ngIf="matchInfo.matchGroup == 'RANKED'">
-        <span>&nbsp;({{ 'monitor.season' | translate }} {{matchInfo.rankedSeason}})</span>
-      </ng-container>
-      <span>, {{matchInfo.map.name}}</span>
+        <span>&nbsp;({{ 'monitor.season' | translate }} {{matchInfo.rankedSeason}})</span></ng-container><span>, {{matchInfo.map.name}}</span>
     </div>
   </ng-container>
 </div>
