--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,7 +11,7 @@
   --text-color-secondary: $textSecondaryColor;
   --primary-color: $primaryColor;
   --primary-color-text: $primaryTextColor;
-  --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+  --font-family: "Open Sans", Arial
 }
 
 * {
