--- a/src/app/components/main/topbar/topbar.component.html
+++ b/src/app/components/main/topbar/topbar.component.html
@@ -14,11 +14,9 @@
   </div>
   <ng-container *showOn="'tablet';higher:true">
     <div id="matchInfoWrapper" class="iconWrapper" *ngIf="signalrService.info$ | async;let matchInfo">
-      <span>{{matchInfo.matchGroup | matchGroup | translate}}</span>
-      <ng-container *ngIf="matchInfo.matchGroup == 'CLAN'">
+      <span>{{matchInfo.matchGroup | matchGroup | translate}}</span><ng-container *ngIf="matchInfo.matchGroup == 'CLAN'">
         <span>&nbsp;({{ 'monitor.season' | translate }} {{matchInfo.clanSeasonId}})</span>
-      </ng-container>
-      <ng-container *ngIf="matchInfo.matchGroup == 'RANKED'">
+      </ng-container><ng-container *ngIf="matchInfo.matchGroup == 'RANKED'">
         <span>&nbsp;({{ 'monitor.season' | translate }} {{matchInfo.rankedSeason}})</span></ng-container><span>, {{matchInfo.map.name}}</span>
     </div>
   </ng-container>
