--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import 'styles/titlebar.scss';
 @import 'styles/topbar.scss';
 @import 'styles/startup.scss';
+@import 'styles/match-history.scss';
 @import 'styles/monitor.scss';
 @import 'styles/settings.scss';
 @import 'styles/changelogs.scss';
