Write own window state management Remove fps from configtool

--- a/src/app/components/main/configtool/configtool.component.html
+++ b/src/app/components/main/configtool/configtool.component.html
@@ -37,18 +37,18 @@
       <article class="options-right settings">
         <section>
           <h3>{{'configtool.headerOptions' | translate}}</h3>
-          <article>
-            <caption>
-              {{ 'configtool.options.maxFrameRate.caption' | translate }}
-            </caption>
-            <summary>
-              {{ 'configtool.options.maxFrameRate.summary' | translate }}
-            </summary>
-            <div class="input-wrap">
-              <input pInputText [formControl]="settingsService.form.configtoolConfig.maxFrameRate"
-                type="number">
-            </div>
-          </article>
+<!--          <article>-->
+<!--            <caption>-->
+<!--              {{ 'configtool.options.maxFrameRate.caption' | translate }}-->
+<!--            </caption>-->
+<!--            <summary>-->
+<!--              {{ 'configtool.options.maxFrameRate.summary' | translate }}-->
+<!--            </summary>-->
+<!--            <div class="input-wrap">-->
+<!--              <input pInputText [formControl]="settingsService.form.configtoolConfig.maxFrameRate"-->
+<!--                type="number">-->
+<!--            </div>-->
+<!--          </article>-->
           <article>
             <caption>
               {{ 'configtool.options.versionedReplays.caption' | translate }}
